use download api
